# sharing-copyboard

./: .gitignore  README.md  jest.config.ts  package.json  pnpm-lock.yaml
docs/: demand.md  (+1 more)
src-tauri/: .env  Cargo.toml  sharing-copyboard.db  sharing-copyboard.db-journal  tauri.conf.json
src-tauri/.sqlx/: query-016841b9b8552df64897b55cea4bbd658056c18078c8e5f3638fca0a98c062ad.json  query-16b75de37d57b3a9b424fdbf977e1bc047b787ccb08f5d554d21926860f0e17c.json  query-2e659899b32224516e111b747140b0cb5a5e2f41e658d8285af91c3bafda7566.json  query-46fd204a233b7adece28041d23a2ab40ddcb368c48e53ff49527ab4a087e6359.json  query-5dd54a2fab7024f45bbd62ecfa3404ca8ae51e70807187cf8bb6a1d3b84c6e1e.json  query-6703b4b2fe80f5310a51c7fe719d1535352e187e512aef6566e2b3c68adc876c.json  query-6b8e8e5e02e4f1a4790c867d4cb911923ecdcf75c822e2162fe30a3cb3bd4c5d.json  query-6bfd6252ed7453ed2b9bf1cd2c637c378b877a7e94e529d8b0fa03b7b0772ec8.json  query-9dacdeaf1d640022f726202a52935cce3870abc9eb95f322471591764b48d5a6.json  query-a4821a27a4f2a9662ba6234e4ab77093378c0235e7dc51960e0315ae94766d15.json  query-a990b5669cf17615b222b7343f90669bf063545c376da9388cd0b68d09fb4de2.json  query-b5cd7de4b4c66f76141f6d6738b2a0672a2d199e31435d6b477e1cb625c3a946.json  query-e0ab4a24cb3502fcadb13e49f5fb995ad6cd17fcd136c61736a65c0de3375164.json
src-tauri/migrations/: 20240325000000_init.sql
src-tauri/src/: account.rs  lib.rs  main.rs  security.rs  sync.rs
src-tauri/src/api/: clipboard_api.rs  mod.rs  user_api.rs
src-tauri/src/entity/: clipboard_item.rs  mod.rs  session.rs  user.rs
src-tauri/src/error/: mod.rs
(+27 files in other folders)
