[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2.2.2"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "macros"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
futures-util = "0.3.30"
url = "2.5.0"
rand = "0.8.5"
aes-gcm = { version = "0.10.3", features = ["std"] }
argon2 = { version = "0.5.2", features = ["std"] }

